[package]
name = "stack-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
opener = "0.6.1"
rand = "0.8"
regex = "0.1"
reqwest = { version = "0.11.0", features = ["blocking"] }
rodio = "0.17.3"
sys-info = "0.7.0"
clap = "3.0"
clipboard = "0.5"
rusty_audio = "1.4.1"
web-view = "0.7.3"
native-dialog = "0.5.4"